# piscine_python

./: README.md
python_0/: README.md
python_0/ex00/: Hello.py
python_0/ex01/: format_ft_time.py
python_0/ex02/: find_ft_type.py
python_0/ex03/: NULL_not_found.py
python_0/ex04/: whatis.py
python_0/ex05/: building.py
python_0/ex06/: filterstring.py  ft_filter.py
python_0/ex07/: sos.py
python_0/ex08/: Loading.py  tester.py
python_0/ex09/: README.md  pyproject.toml  tester.py
python_0/ex09/ft_package/: __init__.py  count_in_list.py
python_0/ex09/ft_package.egg-info/: PKG-INFO
python_1/ex00/: give_bmi.py
